--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,5 @@
 ----
--- hosts: web
--  remote_user: root
--  tasks:
--  - template: src=index.html dest=/var/www/html/index.html
+- hosts: web
+  remote_user: root
+  tasks:
+  - template: src=index.html dest=/var/www/html/index.html
