--- a/playbook.yml
+++ b/playbook.yml
@@ -3,3 +3,6 @@
   remote_user: root
   tasks:
   - template: src=index.html dest=/var/www/html/index.html
+  handlers:
+    - name: restart apache2
+      service: name=apache2 state=restarted
